# GBM_Inverse_Potential_Recon

./: .coveragerc  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  codeql.yml  docs.yml
docs/: allowlist_manifest.md  api.md  coverage.md  examples.md  figure_provenance.md  index.md  installation.md  public_smoke_benchmark.md  publish_gate.md  release_file_manifest.txt  release_notes_v0.2.0.md  reproducibility.md  sanitization_report.md  scope_contract.md  theory_notes.md
examples/: alpha_sweep_smoke.py  harmonic_oscillator_demo.py  moment_series_comparison.py
scripts/: reproduce_public_demo_figure.py  sanitize_scan.py  write_coverage_badge.py
src/gbm_inverse_potential/: __init__.py  cli.py  fourier.py
tests/: test_cli.py  test_examples.py  test_fourier.py  test_public_demo_figure.py  test_sanitize_scan.py
