[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm-inverse-potential-recon"
version = "0.1.1"
description = "Minimal public artifact for inverse radial density and potential reconstruction."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Matthew Gage Plott" }]
dependencies = ["numpy>=1.26"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Repository = "https://github.com/M-Gage-Plott42/GBM_Inverse_Potential_Recon"

[project.scripts]
gbm-inverse-demo = "gbm_inverse_potential.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
